--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -28,7 +28,7 @@
             android:layout_weight="1" />
 
         <FrameLayout
-            android:id="@+id/notesDetailContainer"
+            android:id="@+id/noteDetailContainer"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3" />
